--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Colonial Rule</title>
+  <title>More...</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width initial-scale=1">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins|Quicksand|Abril+Fatface|Permanent+Marker">
