--- a/index.html
+++ b/index.html
@@ -104,6 +104,23 @@ display: inline-block;
 margin-left: -95px;
 } 
 }
+  @media (prefers-color-scheme: dark) {
+body, .im {
+background-color: rgb(23,23,23);
+color: white;
+}
+    button {
+background-color: rgb(93,93,93);
+border: 0px solid black;
+color: white;
+}
+a {
+color: white;
+}
+hr {
+border: 0px solid black;
+}
+  }
 </style>
 </head>
 <body>
