--- a/index.html
+++ b/index.html
@@ -127,9 +127,9 @@ border: 0px solid black;
 <nav>
 <tagname>Colonial Rule</tagname>
 <div class="nav">
-            <a class="navco a" href="#">🏠</a>
-            <a class="navco b" href="#blog">👨</a>
-            <a class="navco b" href="#blog">🍔</a>
+            <a class="navco a" href="https://subhransuindia.github.io/Index.github.io/">🏠</a>
+            <a class="navco b" href="https://subhransuindia.github.io/blog.github.io/">👨</a>
+            <a class="navco b" href="https://subhransuindia.github.io/more.github.io/">🍔</a>
         </div>
 <a class="im se">🔍</a>
 <a class="im se" contenteditable="true">Search</a>
@@ -141,8 +141,8 @@ border: 0px solid black;
 <h1>Navigation</h1>
 
 <div class="navbar">
-<li><button><a href="https://subhransu14112008.github.io/Index.github.io/">Colonial Rule</a></button></li>
-<li><button><a href="https://subhransu14112008.github.io/blog.github.io/">Blog</a></button></li>
+<li><button><a href="https://subhransuindia.github.io/Index.github.io/">Colonial Rule</a></button></li>
+<li><button><a href="https://subhransuindia.github.io/blog.github.io/">Blog</a></button></li>
 </div>
 
 </body>
