--- a/index.html
+++ b/index.html
@@ -127,21 +127,21 @@ border: 0px solid black;
 <nav>
 <tagname>Colonial Rule</tagname>
 <div class="nav">
-            <a class="navco a" href="https://subhransuindia.github.io/Index.github.io/">🏠</a>
+            <a class="navco a" href="https://subhransuindia.github.io/colonialrule.github.io/">🏠</a>
             <a class="navco b" href="https://subhransuindia.github.io/blog.github.io/">👨</a>
             <a class="navco b" href="https://subhransuindia.github.io/more.github.io/">🍔</a>
         </div>
 <a class="im se">🔍</a>
 <a class="im se" contenteditable="true">Search</a>
-<a class="im" href="#">More</a>
+<a class="im" href="https://subhransuindia.github.io/more.github.io/">More</a>
 <a class="im" href="#blog">Blog</a>
-<a class="im" href="#">Home</a>
+<a class="im" href="https://subhransuindia.github.io/colonialrule.github.io/">Home</a>
 </nav>
 
 <h1>Navigation</h1>
 
 <div class="navbar">
-<li><button><a href="https://subhransuindia.github.io/Index.github.io/">Colonial Rule</a></button></li>
+<li><button><a href="https://subhransuindia.github.io/colonialrule.github.io/">Colonial Rule</a></button></li>
 <li><button><a href="https://subhransuindia.github.io/blog.github.io/">Blog</a></button></li>
 </div>
 
