--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ border: 0px solid black;
 <nav>
 <tagname>Colonial Rule</tagname>
 <div class="nav">
-            <a class="navco a" href="https://subhransuindia.github.io/colonialrule.github.io/">🏠</a>
+            <a class="navco a" href="https://subhransuindia.github.io/home.github.io/">🏠</a>
             <a class="navco b" href="https://subhransuindia.github.io/blog.github.io/">👨</a>
             <a class="navco b" href="https://subhransuindia.github.io/more.github.io/">🍔</a>
         </div>
@@ -135,7 +135,7 @@ border: 0px solid black;
 <a class="im se" contenteditable="true">Search</a>
 <a class="im" href="https://subhransuindia.github.io/more.github.io/">More</a>
 <a class="im" href="#blog">Blog</a>
-<a class="im" href="https://subhransuindia.github.io/colonialrule.github.io/">Home</a>
+<a class="im" href="https://subhransuindia.github.io/home.github.io/">Home</a>
 </nav>
 
 <h1>Navigation</h1>
