--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@ border: 0px solid black;
 <div class="navbar">
 <li><button><a href="https://subhransuindia.github.io/colonialrule.github.io/">Colonial Rule</a></button></li>
 <li><button><a href="https://subhransuindia.github.io/blog.github.io/">Blog</a></button></li>
+  <li><button><a href="https://subhransuindia.github.io/ashoka.github.io/">Ashoka</a></button></li>
 </div>
 
 </body>
