--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -10,8 +11,10 @@ html {
 scroll-behavior: smooth;
 }
 body {
-  background-color: snow;
+  background-color: rgb(23,23,23);
   font-family: Poppins;
+  color: rgb(232,232,232);
+  margin: 0;
 }
 
 h1 {
@@ -24,23 +27,25 @@ margin-left: 10px;
 p {
   font-family: Poppins;
   font-size: 15px;
+  margin: 10px;
 }
 nav {
 padding: 10px;
+background-color: rgb(53,53,53);
 }
 tagname {
 padding: 32px;
 }
 a {
 text-decoration: none;
-color: black;
+color: rgb(232,232,232);
 }
 .im {
 float: right;
 border-radius: 10px;
 margin-right: 32px;
 text-decoration: none;
-color: black;
+color: rgb(232,232,232);
 transition: 1s;
 }
 .navbar {
@@ -55,17 +60,21 @@ font-family: Quicksand;
 border-radius: 10px;
 transition: 2s;
 }
+li {
+margin-left: 10px;
+}
 button:hover {
 background-color: #7f69ff;
 transition: 2s;
 }
 .im:hover {
-background-color: cornsilk;
+background-color: rgb(93,93,93);
 padding: 5px;
 transition: 1s;
+color: rgb(232,232,232);
 }
 .se:hover {
-background-color: snow;
+color: rgb(232,232,232);
 padding: 2px;
 }
 .nav {
@@ -79,7 +88,7 @@ padding: 2px;
             color: black;
             display: inline-block;
             border-radius: 10px;
-            background-color: whitesmoke;
+            background-color: rgb(53,53,53);
             padding: 10px;
             transition: 1s;
         }
@@ -134,7 +143,7 @@ border: 0px solid black;
 <a class="im se">🔍</a>
 <a class="im se" contenteditable="true">Search</a>
 <a class="im" href="https://subhransuindia.github.io/more.github.io/">More</a>
-<a class="im" href="#blog">Blog</a>
+<a class="im" href="https://subhransuindia.github.io/blog.github.io/">Blog</a>
 <a class="im" href="https://subhransuindia.github.io/home.github.io/">Home</a>
 </nav>
 
