--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ border: 0px solid black;
 </head>
 <body>
 <nav>
-<tagname>Colonial Rule</tagname>
+<tagname>More/tagname>
 <div class="nav">
             <a class="navco a" href="https://subhransuindia.github.io/home.github.io/">🏠</a>
             <a class="navco b" href="https://subhransuindia.github.io/blog.github.io/">👨</a>
