--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@ border: 0px solid black;
 <li><button><a href="https://subhransuindia.github.io/blog.github.io/">Blog</a></button></li>
   <li><button><a href="https://subhransuindia.github.io/ashoka.github.io/">Ashoka</a></button></li>
    <li><button><a href="https://subhransuindia.github.io/maratha-empire.github.io/">Maratha Empire</a></button></li>
+   <li><button><a href="https://subhransuindia.github.io/Trip-To-Pakur/">Trip to Pakur</a></button></li>
 </div>
 
 </body>
