--- a/index.html
+++ b/index.html
@@ -156,6 +156,8 @@ border: 0px solid black;
   <li><button><a href="https://subhransuindia.github.io/ashoka.github.io/">Ashoka</a></button></li>
    <li><button><a href="https://subhransuindia.github.io/maratha-empire.github.io/">Maratha Empire</a></button></li>
    <li><button><a href="https://subhransuindia.github.io/Trip-To-Pakur/">Trip to Pakur</a></button></li>
+  <li><button><a href="https://subhransuindia.github.io/Durga-Puja-Experience-in-2021/">Durga Puja Experience : 2021
+</a></button></li>
 </div>
 
 </body>
