--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@ border: 0px solid black;
    <li><button><a href="https://subhransuindia.github.io/Trip-To-Pakur/">Trip to Pakur</a></button></li>
   <li><button><a href="https://subhransuindia.github.io/Durga-Puja-Experience-in-2021/">Durga Puja Experience : 2021
 </a></button></li>
+   <li><button><a href="https://subhransuindia.github.io/Video-Games-A-Helpful-Devil/">Video Games: A Helpful Devil</a></button></li>
 </div>
 
 </body>
