--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@ border: 0px solid black;
   <li><button><a href="https://subhransuindia.github.io/How-to-Build-a-Website/">How to do Coding (How to Build a Website)!!</a></button></li>
   <li><button><a href="https://subhransuindia.github.io/Summer-Night-Walk/">Summer Night Walk</a></button></li>
     <li><button><a href="https://subhransuindia.github.io/Kindergarten-Days/">Kindergarten Days</a></button></li>
+  <li><button><a href="https://subhransuindia.github.io/Festival-of-Lights-Diwali-2021/">Festival of Lights, Diwali!! 2021</a></button></li>
 </div>
 
 </body>
