--- a/index.html
+++ b/index.html
@@ -163,6 +163,8 @@ border: 0px solid black;
   <li><button><a href="https://subhransuindia.github.io/Summer-Night-Walk/">Summer Night Walk</a></button></li>
     <li><button><a href="https://subhransuindia.github.io/Kindergarten-Days/">Kindergarten Days</a></button></li>
   <li><button><a href="https://subhransuindia.github.io/Festival-of-Lights-Diwali-2021/">Festival of Lights, Diwali!! 2021</a></button></li>
+   <li><button><a href="https://subhransuindia.github.io/From-Boring-to-Unique-Sarcastic/">From Boring to Unique (Sarcastic)</a></button></li>
+   <li><button><a href="https://subhransuindia.github.io/Horrible-Incident-in-our-Locality/">Horrible Incident in our Locality</a></button></li>
 </div>
 
 </body>
